--- a/index.html
+++ b/index.html
@@ -44,6 +44,19 @@
         border-radius: 10px;
         text-decoration: none;
       }
+      .spinner {
+        width: 40px;
+        height: 40px;
+        border: 4px solid #f0f0f0;
+        border-top: 4px solid #111;
+        border-radius: 50%;
+        animation: spin 0.8s linear infinite;
+        margin: 20px auto;
+      }
+      @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+      }
     </style>
     <script>
       // Redirección automática al cargar la página
@@ -66,10 +79,10 @@
   </head>
   <body>
     <div class="card">
-      <h1>Volver a la app</h1>
-      <p>Pulsa el botón para volver a Spark:</p>
-      <a id="manual-link" class="btn" href="#">Abrir Spark</a>
-      <p class="hint">Asegúrate de tener instalada la app.</p>
+      <h1>Refirigiendo a la app ...</h1>
+      <div class="spinner"></div>
+      <p>Si no se redirige automáticamente, pulsa el botón para volver a Spark:</p>
+      <a id="manual-link" class="btn" href="#">Volver a la app</a>
     </div>
   </body>
 </html>
